deployment/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: treetracker-query-api
  labels:
    app: treetracker-query-api
  namespace: webmap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: treetracker-query-api
  template:
    metadata:
      labels:
        app: treetracker-query-api
    spec:
      containers:
        - name: treetracker-query-api
          image: greenstand/treetracker-query-api:v1.2.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
