deployment/base/postgrest-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: treetracker-postgrest
  labels:
    app: treetracker-postgrest
  namespace: webmap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: treetracker-postgrest
  template:
    metadata:
      labels:
        app: treetracker-postgrest
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: doks.digitalocean.com/node-pool
                    operator: In
                    values:
                      - microservices-node-pool
      containers:
        - name: postgrest
          image: postgrest/postgrest:v12.0.2
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
