deployment/base/postgrest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: treetracker-postgrest
spec:
  selector:
    app: treetracker-postgrest
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
