deployment/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: treetracker-query-api
  namespace: webmap
spec:
  selector:
    app: treetracker-query-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3006  # change if container doesn't use 3006
