deployment/base/postgrest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgrest-ingress
  namespace: webmap
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /query-postgrest(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: postgrest-service
            port:
              number: 3000
